# paperclaw-skills

./: .gitignore  LICENSE  README.md  SKILL.md  bci_tracker_implementation_plan.md  config.yaml  pyproject.toml
openclaw/scenarios/: bci-daily-paper-tracker.md  bci-weekly-paper-tracker.md
openclaw/skills/bci-paper-curation/: SKILL.md
openclaw/skills/bci-paper-curation/agents/: openai.yaml
openclaw/skills/bci-paper-curation/references/: curation-rules.md
openclaw/skills/bci-paper-curation/scripts/: validate_selection.py
references/: curation-rules.md
scripts/: validate_selection.py
scripts/bci-tracker/: config.yaml  pyproject.toml
scripts/bci-tracker/src/bci_tracker/: cli.py  dedup.py  pool.py  schema.py  scoring.py
scripts/bci-tracker/src/bci_tracker/sources/: arxiv.py  pubmed.py
scripts/bci-tracker/tests/: test_arxiv_parse.py  test_biorxiv_parse.py  test_cli_cleanup.py  test_dedup.py  test_pubmed_parse.py  test_scoring.py  test_validate_selection_script.py
src/bci_tracker/: cli.py  config.py  dates.py  enrich.py  http.py  render.py
src/bci_tracker/sources/: __init__.py  base.py  biorxiv.py  pubmed.py  semantic_scholar.py
tests/: conftest.py  test_arxiv_parse.py  test_biorxiv_parse.py  test_dates.py  test_pubmed_parse.py  test_render_validate.py
tests/fixtures/: arxiv.atom  biorxiv.json  pubmed_efetch.xml
