[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bci-tracker"
version = "0.1.0"
description = "Deterministic BCI/EEG paper candidate tracker and renderer"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.28",
  "PyYAML>=6.0",
  "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
bci-tracker = "bci_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
